Add delete role functionality
